--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.15",
-    "tw-animate-css": "^1.2.4"
+    "tw-animate-css": "^1.2.4",
+    "axios": "^1.6.7",
+    "react-router-dom": "^6.22.1",
+    "jwt-decode": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
